# secure-key

./: .gitignore  .huskyrc  .lintstagedrc  .prettierrc  .versionrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  jest.config.json  make.sh  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: globals.d.ts  index.ts  lib.rs  secure_key.rs
test/: secure-key.test.ts
