[package]
name = "secure-key"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
sha2 = "0.10"
hmac = "0.12"
thiserror = "2.0.12"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rand = "0.9.1"
zeroize = "1.8.1"
subtle = "2.6.1"


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
